<resources>
    <string name="app_name">Smart Alert</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_MP">Identify Phone movement</string>
    <string name="title_activity_MI">Motion detection</string>
    <string name="title_activity_CC">Identify charger</string>
    <string name="title_activity_CS">Phone control with SMS</string>
    <string name="Upgrade_to_full_version">Upgrade to full version</string>
    <string name="Rate_app">Rate app</string>
    <string name="About_us">About us</string>
    <string name="Activate">Activate</string>
    <string name="Siren">Siren</string>
    <string name="Send_SMS">Send SMS</string>
    <string name="Taking_pictures" translatable="false">Taking pictures</string>
    <string name="Show_notification">Show notification</string>
    <string name="Video_recording">Video recording</string>
    <string name="Settings">Settings</string>
    <string name="Sensitivity">Sensitivity</string>
    <string name="medium">medium</string>
    <string name="Siren_sound_level">Siren sound level</string>
    <string name="Change">Change</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Selection">Selection</string>
    <string name="Change_the_siren_sound">Change the siren sound</string>
    <string name="To_enable_upgrade">To enable this section, you must upgrade to the full version of the app</string>
    <string name="More_settings_and_information">More settings and information</string>
    <string name="Siren_sound">Siren sound</string>
    <string name="Activation_timer">Activation timer</string>
    <string name="Show_notification_of_being_active">Show notification of being active</string>
    <string name="Repeat_the_siren">Repeat the siren</string>
    <string name="too_much">too much</string>
    <string name="much">much</string>
    <string name="low">low</string>
    <string name="very_low">very low</string>
    <string name="No_number_entered">Number not entered</string>
    <string name="Inactivate">Inactivate</string>
    <string name="Mute">Mute</string>
    <string name="Siren_back_to_orginal">Do you want to turn the siren back to its original state</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="Police_siren">Police siren</string>
    <string name="EnteـrnumberـtoـSMS">Enter a mobile number to send SMS</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Thanks">Thanks</string>
    <string name="Your_phone_has_been_moved">Your phone has been moved</string>
    <string name="This_section_recognizes_the_movement_of_the_phone">This section recognizes the movement of the phone</string>
    <string name="Bazzar_app_is_not_installed_on_your_phone">Bazzar app is not installed on your phone</string>
    <string name="Myket_app_is_not_installed_on_your_phone">Myket app is not installed on your phone</string>
    <string name="You_are_using_the_full_version">You are using the full version</string>
    <string name="movment_identification_running">movment identification running</string>
    <string name="Motion_detection_running">Motion detection running</string>
    <string name="Identify_charger_running">Identify charger running</string>
    <string name="Start_a_test">Start a test</string>
    <string name="Enable_the_siren_first">Enable the siren first</string>
    <string name="Leave_the_phone_enable">Leave the phone in place and enable the alarm</string>
    <string name="After_activating_if_MP">After activating, if to move your phone, the items you selected in the previous step are done</string>
    <string name="After_activating_if_MI">After activating, if Motion in the environment detected the items you selected in the previous step are done</string>
    <string name="After_activating_if_CC">After activating, If your phone is disconnected from the charger, the items you selected in the previous step are done</string>
    <string name="section_deactivated_after">This section is deactivated after 15 times using the app</string>
    <string name="To_re_enable_it">To re-enable it, the upgrade menu should be updated to the full version</string>
    <string name="action_settings">Setting</string>
    <string name="Someone_has_taken_your_phone">Someone has taken your phone</string>
    <string name="enabled_next_version">will be enabled in the next version</string>
    <string name="About_texts">Version 3.1.0  \nProgrammer: Mahdi Hamzeh  \nPlease send us the program errors to resolve the next version.  \nEmail for any suggestions and criticisms:  \nmahdi2001h@gmail.com</string>
    <string name="Camera_does_not_exist">Camera does not exist</string>
    <string name="Displacement_was_detected">Displacement was detected</string>
    <string name="movement_has_taken">A movement has taken place around your phone</string>
    <string name="First_connect_the_charger">First connect the charger</string>
    <string name="unplugged_of_charger">This part is activated when the phone is unplugged of charger</string>
    <string name="Connect_the_charger_and">Connect the charger to the phone and activate the alarm</string>
    <string name="charger_disconnected">The charger is disconnected</string>
    <string name="Someone_from_charger">Someone has removed your phone from the charger</string>
    <string name="section_recognizes_motion">This section recognizes the motion in the environment by the front camera</string>
    <string name="Place_phone_location">Place the phone in a location and enable the alarm</string>
    <string name="No_network">No network connection</string>
    <string name="Silent">Silent</string>


    <string name="Receive_SMS_from_a_number">Receive SMS from a number</string>
    <string name="Receive_just_from">Receive just from:</string>
    <string name="title_activity_cwm_setting">More setting</string>
    <string name="set_password_for_SMS">Set password for commands</string>
    <string name="password">Password :</string>
    <string name="password_not_entered">Password not entered</string>
    <string name="CWM_help">By this management section can be managed by SMS</string>

</resources>
