<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    card_view:cardCornerRadius="2dp"
    card_view:contentPadding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout_card_view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_view_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/Settings"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Sensitivity_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/Relative_layout_margin">

                <SeekBar
                    android:id="@+id/Sensitivity_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/T_Sensitivity"
                    android:layout_toLeftOf="@+id/Sensitivity_textView"
                    android:layout_toStartOf="@+id/Sensitivity_textView"
                    android:layout_weight="1"
                    android:max="4" />

                <TextView
                    android:id="@+id/Sensitivity_textView"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/T_Sensitivity"
                    android:text=""
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/T_Sensitivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/Sensitivity"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/Relative_layout_margin">

                <SeekBar
                    android:id="@+id/Volume_seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/T_Volume"
                    android:layout_toLeftOf="@+id/Volume_textView"
                    android:layout_toStartOf="@+id/Volume_textView"
                    android:layout_weight="1"
                    android:max="15" />

                <TextView
                    android:id="@+id/Volume_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/T_Volume"
                    android:text="50"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/T_Volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/Siren_sound_level"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/Relative_layout_margin">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/Set_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/Change"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/Phone_Number"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/Relative_layout_margin">

                <TextView
                    android:id="@+id/T_Volume_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/Change_the_siren_sound"
                    android:textAppearance="?android:textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/Delete_audio"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/Pick_audio"
                    android:background="@drawable/tra"
                    android:src="@drawable/ic_delete_black_24dp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/Pick_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/Selection"
                    android:textAlignment="center" />

            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/Activate_T"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/To_enable_upgrade"
            android:textSize="20sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
